Added Page Titles

--- a/src/styles/ResetPassword.css
+++ b/src/styles/ResetPassword.css
@@ -22,3 +22,9 @@
     font-size: 30px;
     margin-bottom: 30px;
   }
+
+  .ResetPassword h2 {
+    text-align: center;
+    margin-bottom: 25px;
+
+}
