--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,13 +1,13 @@
-.Home .lander {
+.Dashboard .lander {
     padding: 80px 0;
     text-align: center;
 }
 
-.Home .lander h1 {
+.Dashboard .lander h1 {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
 }
 
-.Home .lander p {
+.Dashboard .lander p {
     color: #999
 }
