--- a/src/styles/Participants.css
+++ b/src/styles/Participants.css
@@ -8,6 +8,7 @@
 .Participants .card {
     flex: 1 0 21%;
     width: 120px;
+    height: 240px;
     max-width: 120px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -30,14 +31,47 @@
 
 .Participants .card-body {
     padding: 0.4rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .Participants .card-body .name {
     font-size: 1rem;
     font-weight: bold;
+    margin-top: auto;
 }
 
 .Participants .card-img-top {
     max-width: 120px;
     max-height: 160px;
+}
+
+.Participants .profile-holder {
+    position: relative;
+}
+
+
+.Participants .delete {
+    position: absolute;
+    display: block;
+    top: 15px;
+    right: 20px;
+    display: block;
+    background-color: #c94d46;
+    border: 1px solid #333;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    opacity: 0.6;
+    color: white;
+    line-height: 12.5px;
+}
+
+.Participants .delete:hover {
+    opacity: 1;
+}
+
+.Participants .delete span {
+    font-size: 20px;
+    font-weight: lighter;
 }
